<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">云收款机</string>
    <string name="action_settings">Settings</string>
    <string name="company_name">打印机公司</string>
    <string name="shop_company_title">宁波月湖店</string>
    <string name="shop_num">门店号：</string>
    <string name="shop_note_num">单据号：</string>
    <string name="shop_cashier_num">收银员：</string>
    <string name="shop_receipt_date">单据日期：</string>
    <string name="shop_print_time">打印时间：</string>
    <string name="shop_goods_number">数量：</string>
    <string name="shop_goods_total_price">总计：</string>
    <string name="shop_payment">付款：</string>
    <string name="shop_change">找零：</string>
    <string name="shop_company_name">公司名称：</string>
    <string name="shop_company_site">公司网址：</string>
    <string name="shop_company_address">地址：</string>
    <string name="shop_company_tel">电话：</string>
    <string name="shop_Service_Line">服务专线：</string>
    <string name="shop_thanks">谢谢惠顾,欢迎再次光临！</string>
    <string name="bags">保鲜袋</string>
    <string name="umbrella">雨伞</string>
    <string name="hook">铁丝挂钩</string>
    <string name="choose_barcode_type">条码类型:</string>
    <string name="choose_paper_width">纸张宽度:</string>
    <string name="choose_printer_type">打印机类型:</string>
    <string name="choose_Encoding">编码方式:</string>
    <string name="printer_type_remin">热敏</string>
    <string name="printer_type_styuls">针打</string>
    <string name="usb">USB</string>
    <string name="bluetooth">蓝牙</string>
    <string name="wifi">wifi</string>
    <string name="shop_receipt_num">单据</string>
    <string name="print_codepage">打印代码页</string>
    <string name="note_title">品名;单价;数量;金额;折扣</string>
    <string name="no_conn_address">地址：未连接</string>
    <string name="no_conn_name">名称：未连接</string>
    <string name="str_address">地址：</string>
    <string name="str_name">名称：</string>
    <string name="str_message">提示：</string>
    <string name="str_connlast">是否连接到上次设备？</string>
    <string name="yesconn">确认连接</string>
    <string name="str_resel">重新搜索</string>
    <string name="str_wifi_now">当前连接的wifi是：</string>
    <string name="str_wifi_no">尚未连接到任何wifi网络</string>
    <string name="print">打印</string>
    <string name="conn_failed">连接失败</string>
    <string name="conn_closed">连接关闭</string>
    <string name="conn_no">没有可连接的设备</string>
    <string name="password">请输入密码</string>
    <string name="cancel">取消</string>
    <string name="connect">打开连接</string>
    <string name="disconnect">断开连接</string>
    <string name="connect_paired">连接</string>
    <string name="select_options">选择操作</string>
    <string name="none_found">没有找到设备</string>
    <string name="no_bounded_device">未找到名称以 %s 开头的设备</string>
    <string name="title_paired_devices">已配对的设备</string>
    <string name="title_other_devices">其它可用设备</string>
    <string name="button_scan">扫描新设备</string>
    <string name="paire_connect">配对并连接</string>
    <string name="scanning" tools:ignore="TypographyEllipsis">扫描设备中...</string>
    <string name="select_device">请选择要连接的设备</string>
    <string name="none_paired">没有匹配的设备</string>
    <string name="has_paired">已配对</string>
    <string name="not_paired">未配对</string>
    <string name="rePaire_connect">重新配对并连接</string>
    <string name="unpair">取消配对</string>
    <string name="bt_not_enabled">蓝牙没有启动</string>
    <string name="str_file">打印文件效果展示：</string>
    <string name="str_text">打印文本效果展示：</string>
    <string name="str_text_left">文字居左效果演示abc123：</string>
    <string name="str_text_right">文字居右效果演示abc123：</string>
    <string name="str_text_center">文字居中效果演示abc123：</string>
    <string name="str_text_strong">文字加粗效果演示abc123：</string>
    <string name="str_text_underline">文字下划线效果演示abc123：</string>
    <string name="str_text_height">同行不同高效果演示：：</string>
    <string name="str_note">打印小票效果演示：</string>
    <string name="str_show">演示：</string>
    <string name="note_label">此项功能仅支持标签打印机。</string>
    <string name="times">倍</string>
    <string name="bigger">放大</string>
    <string name="bigger1">倍效果演示abc123</string>
    <string name="cashier_desk">收银台</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="qrcode">二维码/条形码</string>
    <string name="qrcode_hint">对准二维码/条形码到框内即可扫描</string>
    <string name="zero">0.00</string>
    <string name="pay_details">支付明细</string>
    <string name="reset">重置</string>
    <string name="yingshou">应收</string>
    <string name="change">找零</string>
    <string name="shihou">实收</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="poi">.</string>
    <string name="_0">0</string>
    <string name="clear">清除</string>
    <string name="just_right">正好</string>
    <string name="pay">支 付</string>
    <string name="cash">现金</string>
    <string name="bank_card">银行卡</string>
    <string name="discount_coupon">优惠券</string>
    <string name="alipay">支付宝</string>
    <string name="weixin_pay">微信支付</string>
    <string name="collection_info">收款信息</string>
    <string name="_zero">￥0.00</string>
    <string name="no">序</string>
    <string name="good_name">商品名称</string>
    <string name="num_price">数量*单价</string>
    <string name="money">金额</string>
    <string name="all_cancel">整单取消</string>
    <string name="pay_for">付款</string>
    <string name="sure">确认</string>
    <string name="jian">件</string>
    <string name="sale">销售</string>
    <string name="jian_0">0件</string>
    <string name="statistics">统计</string>
    <string name="select_cashier">请选择收银员</string>
    <string name="pospi">POSPi</string>
    <string name="scan">扫描</string>
    <string name="back">返回</string>
    <string name="android">Android书</string>
    <string name="amount">数量</string>
    <string name="_2016_05_24">2016-05-24</string>
    <string name="date">日期：</string>
    <string name="cashier">收银员：</string>
    <string name="manager">管理员</string>
    <string name="trade_amount">交易笔数：</string>
    <string name="yingjiao">应缴:</string>
    <string name="shijiao">实缴:</string>
    <string name="chae">差额:</string>
    <string name="collection_total">收款合计</string>
    <string name="payment">付款方式</string>
    <string name="yingshou_money">应收金额(元)</string>
    <string name="shishou_money">实收金额(元)</string>
    <string name="change_money">找零金额(元)</string>
    <string name="jiaokuan_total">缴款合计</string>
    <string name="pay_money">付款金额</string>
    <string name="all_sale_num">总销售数量:</string>
    <string name="sale_total">总销售额:</string>
    <string name="discount_total">总折扣额:</string>
    <string name="in_total">总销售收入:</string>
    <string name="sale_num">销售数量</string>
    <string name="sale_money">销售额</string>
    <string name="discount_money">折扣额</string>
    <string name="sale_in">销售收入</string>
    <string name="setting">设置</string>
    <string name="close">关闭</string>
    <string name="details">详情</string>
    <string name="about_pospi">关于POSPi</string>
    <string name="acount_info">账号信息</string>
    <string name="other">其他</string>
    <string name="ping">设备检测（ping功能）</string>
    <string name="exit_current">退出当前账号</string>
    <string name="account">账号</string>
    <string name="shop_id">店铺号</string>
    <string name="cash_register_id">收银机号</string>
    <string name="_ping">Ping</string>
    <string name="router">路由器</string>
    <string name="server">服务器</string>
    <string name="collect_server">连接服务器运行程序</string>
    <string name="pospi_jump">进入POSPi后台</string>
    <string name="connect_well">连接通畅</string>
    <string name="cashier_id">收银员号</string>
    <string name="login">登录</string>
    <string name="hint_account">账户/邮箱/手机号</string>
    <string name="title_activity_refunds">RefundsActivity</string>
    <string name="rest_order">挂单</string>
    <string name="next">下一个</string>
    <string name="serverurl">http://192.168.10.1:8809/update.xml</string>
    <string name="ethernet">网口</string>
    <string name="print_mode">打印模式</string>
    <string name="tsc">标签</string>
    <string name="esc">票据</string>
    <string name="print_text">打印文字</string>
    <string name="print_image">打印图片</string>
    <string name="print_1d_barcode">打印一维码</string>
    <string name="open">打开端口</string>
    <string name="receive">接收的数据</string>
    <string name="query">查询状态</string>
    <string name="init_port_info">接口:未设定 地址:不详</string>
    <string name="port">接口:</string>
    <string name="address">地址:</string>
    <string name="port_parameters_wrong">端口参数错误！</string>
    <string name="port_parameters_is_not_save">端口参数未保存！</string>
    <string name="gprinter001">Printer 001</string>
    <string name="gprinter002">Printer 002</string>
    <string name="gprinter003">Printer 003</string>
    <string name="gprinter004">Printer 004</string>
    <string name="gprinter005">Printer 005</string>
    <string name="gprinter006">Printer 006</string>
    <string name="gprinter007">Printer 007</string>
    <string name="gprinter008">Printer 008</string>
    <string name="gprinter009">Printer 009</string>
    <string name="gprinter010">Printer 010</string>
    <string name="gprinter011">Printer 011</string>
    <string name="gprinter012">Printer 012</string>
    <string name="gprinter013">Printer 013</string>
    <string name="gprinter014">Printer 014</string>
    <string name="gprinter015">Printer 015</string>
    <string name="gprinter016">Printer 016</string>
    <string name="gprinter017">Printer 017</string>
    <string name="gprinter018">Printer 018</string>
    <string name="gprinter019">Printer 019</string>
    <string name="gprinter020">Printer 020</string>
    <string name="cut">断开</string>
    <string name="cutting">断开中</string>
    <string name="connected">已连接</string>
    <string name="connecting">连接中</string>
    <string name="ok">确定</string>
    <string name="port_configuration">端口设置</string>
    <string name="bluetooth_is_not_enabled">蓝牙没有开启</string>
    <string name="bluetooth_device_list">蓝牙设备列表</string>
    <string name="select_bluetooth_device">选择蓝牙设备</string>
    <string name="none_bluetooth_device_found">没有找到蓝牙设备</string>
    <string name="refresh_bluetooth_list">打开蓝牙设备列表</string>
    <string name="scaning">正在扫描。。。</string>
    <string name="usb_info">扫描到的设备USB信息</string>
    <string name="refresh_usb_device">扫描USB设备</string>
    <string name="ip_address">ip:</string>
    <string name="default_ip_address">192.168.123.100</string>
    <string name="port_number">port:</string>
    <string name="default_port_number">9100</string>
    <string name="bluetooth_address">蓝牙地址： </string>
    <string name="usb_address">USB： </string>
    <string name="usb_devices_list">USB设备列表</string>
    <string name="none_usb_device">未连接USB打印机</string>
    <string name="current_version">当前版本</string>
    <string name="find_new_version">发现新版本</string>
    <string name="whether_or_not_to_update">是否更新？</string>
    <string name="app_update">App软件更新</string>
    <string name="update">更新</string>
    <string name="not_update">暂不更新</string>
    <string name="downloading">正在下载</string>
    <string name="please_wait">请稍后</string>
    <string name="download_complated">下载完成</string>
    <string name="whether_or_not_setup_new_app">是否安装新的应用</string>
    <string name="loading">正在载入。。。</string>
    <string name="copy_right_en">COPYRIGHT@2014 GPRINTER ALL RIGHTS RESERVERD</string>
    <string name="copy_right_cn">佳博集团 版权所有</string>
    <string-array name="erp">
            <item>科传V3</item>
            <item>科传V6</item>
   </string-array>
    <string name="start_download">开始下载</string>
    <string name="download_progress">下载进度</string>
    <string name="was_latest_version">当前已是最新版</string>
    <string name="finished_install">下载完成，点击安装</string>
    <string name="download_done">任务下载完成</string>
    <string name="download_tips">下载提示</string>
</resources>