<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.pospi.fragment.CashierTodayFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:paddingRight="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/cashier_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2016_05_24"
                android:textColor="@color/blue_sale"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/cashier"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/cashier_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manager"
                android:textColor="@color/black"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/trade_amount"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/cashier_today_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textColor="@color/black"
                android:textSize="22sp" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                style="@style/today_sale_tv"
                android:text="@string/yingjiao" />

            <TextView
                android:id="@+id/cashier_payable"
                style="@style/today_sale_num"
                android:text="@string/zero" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                style="@style/today_sale_tv"
                android:text="@string/shijiao" />

            <TextView
                android:id="@+id/cashier_paid"
                style="@style/today_sale_num"
                android:text="@string/zero" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                style="@style/today_sale_tv"
                android:text="@string/chae" />

            <TextView
                android:id="@+id/cashier_gap"
                style="@style/today_sale_num"
                android:text="@string/zero"
                android:textColor="@color/red" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_weight="7"
        android:background="@color/gray"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/cashier_today_style_title"
                android:text="@string/collection_total" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/blue_sale" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/today_sale_lv_title"
                    android:text="@string/payment" />

                <TextView
                    style="@style/today_sale_lv_title"
                    android:text="@string/yingshou_money" />

                <TextView
                    style="@style/today_sale_lv_title"
                    android:text="@string/shishou_money" />

                <TextView
                    style="@style/today_sale_lv_title"
                    android:text="@string/change_money" />

            </LinearLayout>

            <ListView
                android:id="@+id/cashier_lv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6"
                android:divider="@null" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/cashier_today_style_title"
                android:text="@string/jiaokuan_total" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/blue_sale" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/today_sale_lv_title"
                    android:text="@string/payment" />

                <TextView
                    style="@style/today_sale_lv_title"
                    android:text="@string/pay_money" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
