<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.pospi.fragment.TodayTimeStaticFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:gravity="center_vertical"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/today_sale_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2016_05_24"
            android:textColor="@color/blue_sale"
            android:textSize="22sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                style="@style/today_sale_tv"
                android:text="总交易笔数:" />

            <TextView
                android:id="@+id/static_num"
                style="@style/today_sale_num"
                android:text="@string/_0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                style="@style/today_sale_tv"
                android:text="@string/sale_total" />

            <TextView
                android:id="@+id/static_sale"
                style="@style/today_sale_num"
                android:text="@string/zero" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                style="@style/today_sale_tv"
                android:text="@string/discount_total" />

            <TextView
                android:id="@+id/static_discount"
                style="@style/today_sale_num"
                android:text="@string/zero" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                style="@style/today_sale_tv"
                android:text="@string/in_total" />

            <TextView
                android:id="@+id/static_in"
                style="@style/today_sale_num"
                android:text="@string/zero" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_weight="7"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/blue_sale" />

        <view
            android:id="@+id/chart1"
            class="com.pospi.util.MyChartView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>
</LinearLayout>
